--- a/frontend/src/app/components/login-admin/login-admin.component.css
+++ b/frontend/src/app/components/login-admin/login-admin.component.css
@@ -14,15 +14,24 @@
     width: 800px;
     border-radius: 3px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    height: 420px
+    height: 450px
 }
 
 /* receipts box */
 .receipts {
-    background-color: #3D4C41;
+    background-color: lightgray;
+    color: black;
     flex: 1;
     overflow-y: auto;
-   
+    border: 1px solid #3D4C41;
+}
+
+.receipt-data {
+    margin-bottom: 1em;
+}
+
+.receipts-heading {
+    margin-bottom: 1em;
 }
 
 @media (max-width: 800px) {
@@ -34,7 +43,6 @@
         width: 400px
     }
 }
-
 
 /* log-in box */
 .login {
@@ -66,9 +74,44 @@
 }
 
 .login-button {
-    margin-top: 1.5rem;
-    margin-bottom: 4rem;
+    margin-top: .5rem;
     background-color: #4085C9;
     color: #FFF;
     cursor: pointer;
+}
+
+/* text for registering */
+.login-text {
+    margin: 1.5em 0;
+}
+
+.login-link {
+    text-decoration: none;
+    color: #4085C9;
+}
+
+.login-link:hover {
+    color: #49B5D6;
+}
+
+.login-type {
+    display: flex;
+}
+
+.login-type-item {
+    margin-right: 1em;
+}
+
+.login-type-item label input{
+    margin-right: .2em;
+}
+
+.message {
+    color: red;
+    margin-bottom: .5em;
+}
+
+.list-item {
+    padding-right: .8em;
+    padding-bottom: .3em;
 }
