--- a/frontend/src/app/components/register/register.component.css
+++ b/frontend/src/app/components/register/register.component.css
@@ -19,9 +19,19 @@
 
 /* receipts box */
 .receipts {
-    background-color: #3D4C41;
+    background-color: lightgray;
+    color: black;
     flex: 1;
     overflow-y: auto;
+    border: 1px solid #3D4C41;
+}
+
+.receipt-data {
+    margin-bottom: 1em;
+}
+
+.receipts-heading {
+    margin-bottom: 1em;
 }
 
 @media (max-width: 800px) {
@@ -82,4 +92,9 @@
     background-color: lightgray;
     color: #000;
     cursor: pointer;
+}
+
+.list-item {
+    padding-right: .8em;
+    padding-bottom: .3em;
 }
