--- a/frontend/src/app/components/company-pages/add-buyer-extra/add-buyer-extra.component.html
+++ b/frontend/src/app/components/company-pages/add-buyer-extra/add-buyer-extra.component.html
@@ -1,5 +1,10 @@
 <div class="first-login">
     <h1>Dodatne informacije</h1>
+    
+    <div style="color: red" class="first-login-item">
+        {{ message }}
+    </div>
+
     <div class="first-login-item">
         <div class="register-type">
             <label>
